UI Changes, added EXIF support

--- a/ui/PF2_Activity.glade
+++ b/ui/PF2_Activity.glade
@@ -360,6 +360,108 @@
             <property name="position">3</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="halign">center</property>
+            <property name="valign">center</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkImage">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="pixbuf">complete.png</property>
+                <property name="pixel_size">128</property>
+                <property name="icon_size">6</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Export Complete</property>
+                <attributes>
+                  <attribute name="scale" value="1.5"/>
+                </attributes>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="PF2_export_complete_label">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_top">8</property>
+                <property name="margin_bottom">8</property>
+                <property name="ellipsize">end</property>
+                <attributes>
+                  <attribute name="scale" value="1"/>
+                </attributes>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButtonBox">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="halign">center</property>
+                <property name="layout_style">expand</property>
+                <child>
+                  <object class="GtkButton" id="PF2_export_complete_back">
+                    <property name="label" translatable="yes">Back to Photo</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <style>
+                      <class name="suggested-action"/>
+                    </style>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="PF2_export_again">
+                    <property name="label" translatable="yes">Export Again</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="name">export_complete</property>
+            <property name="title" translatable="yes">page0</property>
+            <property name="position">4</property>
+          </packing>
+        </child>
       </object>
       <packing>
         <property name="expand">True</property>
@@ -401,8 +503,6 @@
                   <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="margin_left">18</property>
-                    <property name="margin_right">18</property>
                     <property name="margin_top">18</property>
                     <property name="margin_bottom">18</property>
                     <property name="orientation">vertical</property>
@@ -411,6 +511,8 @@
                       <object class="GtkRevealer" id="PF2_histogram_reveal">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="margin_left">18</property>
+                        <property name="margin_right">18</property>
                         <property name="reveal_child">True</property>
                         <child>
                           <object class="GtkBox">
@@ -530,6 +632,8 @@
                       <object class="GtkRevealer" id="PF2_layers_reveal">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="margin_left">18</property>
+                        <property name="margin_right">18</property>
                         <property name="transition_type">slide-up</property>
                         <child>
                           <object class="GtkBox">
@@ -753,6 +857,8 @@
                       <object class="GtkRevealer" id="PF2_layer_mask_reveal">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="margin_left">18</property>
+                        <property name="margin_right">18</property>
                         <property name="transition_type">slide-up</property>
                         <child>
                           <object class="GtkBox">
@@ -917,6 +1023,8 @@
                       <object class="GtkBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="margin_left">18</property>
+                        <property name="margin_right">18</property>
                         <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
                         <child>
@@ -983,6 +1091,8 @@
                               <object class="GtkStack" id="PF2_tool_stack">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="margin_left">18</property>
+                                <property name="margin_right">18</property>
                                 <property name="hhomogeneous">False</property>
                                 <property name="vhomogeneous">False</property>
                                 <property name="transition_type">crossfade</property>
