--- a/ui/PhotoFiddle.glade
+++ b/ui/PhotoFiddle.glade
@@ -114,7 +114,7 @@
             <property name="margin_left">6</property>
             <property name="label" translatable="yes">PhotoFiddle2</property>
             <attributes>
-              <attribute name="weight" value="ultraheavy"/>
+              <attribute name="weight" value="bold"/>
               <attribute name="scale" value="1.5"/>
             </attributes>
           </object>
